fixed alignment on index.ejs features using grid css

--- a/public/css/styles11.css
+++ b/public/css/styles11.css
@@ -551,22 +551,25 @@ animation: countdown 180s linear forwards;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: 60px 60px 60px;
-    grid-row-gap: 30px;
+    grid-row-gap: 40px;
+    grid-column-gap: 60px;
+    justify-items: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .column1 {
     grid-column-start: 1;
     grid-column-end: 2;
-    margin-right: 60px;
-    margin-left: 20px;
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 .column2 {
     grid-column-start: 2;
     grid-column-end: 3;
-    margin-right: 20px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    justify-self: left;
+}
+
+p.column2 {
+    margin-bottom: 0px;
 }
 
 
